# QT5M2I

AnnuaireDAO/: CMakeLists.txt  main.cpp
AnnuaireDAO/dao/: BaseDAO.cpp  BaseDAO.h  ContactDAO.cpp  ContactDAO.h
AnnuaireDAO/entity/: contact.cpp  contact.h
AnnuaireDAO/widget/: formwidget.cpp  formwidget.h  formwidget.ui  listcontactswidget.cpp  listcontactswidget.h  listcontactswidget.ui
AnnuaireDAO/window/: contactwindow.cpp  contactwindow.h  contactwindow.ui
CLion-demo-app/: CMakeLists.txt  contactwindow.cpp  contactwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
CLion-demo-app/correction.ex.rappel.joachim/: JoaChimMainWindow.cpp  JoaChimMainWindow.h  JoaChimMainWindow.ui  mainwindow.cpp  mainwindow.h
CLion-demo-app/demosignal/: Button.cpp  Button.h  Light.cpp  Light.h
CorrectionTP1/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
CorrectionTP1/dao/: BaseDAO.cpp  BaseDAO.h  BookDAO.cpp  BookDAO.h  LoanDAO.cpp  LoanDAO.h  UserDAO.cpp  UserDAO.h
CorrectionTP1/entity/: Book.cpp  Book.h  Loan.cpp  Loan.h  User.cpp  User.h
CorrectionTP1/page/: bookspage.cpp  bookspage.h  bookspage.ui  loanpage.cpp  loanpage.h  loanpage.ui  userspage.cpp  userspage.h  userspage.ui
CorrectionTP1/util/: DataBaseManager.cpp  DataBaseManager.h
CorrectionTP1/widget/: bookformwidget.cpp  bookformwidget.h  bookformwidget.ui  bookswidget.cpp  bookswidget.h  bookswidget.ui  loanformwidget.cpp  loanformwidget.h  loanformwidget.ui  loanswidget.cpp  loanswidget.h  loanswidget.ui  userformwidget.cpp  userformwidget.h  userformwidget.ui  userswidget.cpp  userswidget.h  userswidget.ui
CorrectionTP1MVC/CorrectionTP1MVC/: CorrectionTP1MVC.pro  booksmodel.cpp  booksmodel.h  mainwindow.cpp  mainwindow.h
CorrectionTP1MVC/build-CorrectionTP1MVC-Desktop_Qt_5_15_2_clang_64bit-Debug/: moc_booksmodel.cpp  moc_mainwindow.cpp
CoursMVC/CoursMVC/: CoursMVC.pro  completeddelegate.cpp  completeddelegate.h  customdatamodel.cpp  customdatamodel.h  main.cpp  mainwindow.cpp  mainwindow.h  sliderdelegate.cpp  sliderdelegate.h  taskwindow.cpp  taskwindow.h  taskwindow.ui
CoursMVC/build-CoursMVC-Desktop_Qt_5_15_2_clang_64bit-Debug/: moc_mainwindow.cpp  moc_taskwindow.cpp  ui_taskwindow.h
coursQML/build-coursQML-Desktop_Qt_5_15_2_clang_64bit-Debug/: moc_bookmodel.cpp  moc_contactmodel.cpp  moc_predefs.h  qrc_qml.cpp
coursQML/coursQML/: Form.qml  FormBook.qml  ListBooks.qml  ListContacts.qml  bookmodel.cpp  bookmodel.h  contactmodel.cpp  contactmodel.h  coursQML.pro  fucntions.js  functions.js  main.cpp  main.qml  qml.qrc
ctypes_folder/: demo_ctypes.py
(+390 files in other folders)
